=======
CHANGES
=======

- added --user/--db-user argument to support user authentication

- changed toggle key for enabling/disabling stats from F1 to F3, because the
  Terminator terminal the F1 key is reserved for "help"

- pre-calculate used and idle cpu in sql statement to avoid rounding issues
  that can cause an display overflow in CPU widget

2017/03/30 0.1.0
================

- initial release