@@ -2,6 +2,8 @@
 CHANGES
 =======
 
+- added median, percentile 95, and percentile 99 to query stats table
+
 - added --user/--db-user argument to support user authentication
 
 - changed toggle key for enabling/disabling stats from F1 to F3, because the
